--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ Data/Domain.xcodeproj/xcuserdata/flaviusdolha.xcuserdatad/xcschemes/xcschememana
 Core/Core.xcodeproj/xcuserdata/flaviusdolha.xcuserdatad/xcschemes/xcschememanagement.plist
 Data/.DS_Store
 .DS_Store
+*.xcuserstate
