--- a/Monterey.xcodeproj/xcshareddata/xcschemes/Monterey.xcscheme
+++ b/Monterey.xcodeproj/xcshareddata/xcschemes/Monterey.xcscheme
@@ -28,6 +28,17 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "A952851F2A1FDAA500CC0659"
+               BuildableName = "MontereyTests.xctest"
+               BlueprintName = "MontereyTests"
+               ReferencedContainer = "container:Monterey.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
